--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -28,7 +28,9 @@ html#main(lang='en')
     script(type="text/javascript" src='/build/js/vendor-min.js')
     script(type="text/javascript" src='/build/js/contracts-min.js')
     script(type="text/javascript" src='/build/js/library-min.js')
-    if page === 'logger'
-      script(type="text/javascript" src='/build/js/fight-min.js')
     if page === 'home'
       script(type="text/javascript" src='/build/js/core-min.js')
+    if page === 'logger'
+      script(type="text/javascript" src='/build/js/fight-min.js')
+    if page === 'calculator'
+      script(type="text/javascript" src='/build/js/calculator-min.js')
