--- a/app/views/pages/home.pug
+++ b/app/views/pages/home.pug
@@ -1,21 +1,8 @@
 main.page-wrapper
-  .position-relative.zindex-5.pb-4.mb-md-3.mx-5(style='margin-top: 20px;')
-    .row.mx-n2.py-2
-      .col-md-8.col-sm-6.px-2
-        h1.text-white CryptoBlades Tracker        
-      .col-md-4.col-sm-6.px-2.float-right
-        select#select-currency.form-select2(style='float: right !important;')
+  include ../includes/menu
+  section.position-relative.zindex-5.pb-4.mb-md-3.mx-5.pt-6
     .row
-      .col-md-12.mb-4
-        .card.h-100.rounded-3.p-3.text-white.bg-danger
-          p CryptoBlades Tracker is open-source so anyone can create a clone and modify it to ask for your sensitive information. CryptoBlades Tracker <b>will never ask</b> for your seed phrase or private key! <b>Never share these information</b> to any site nor your friends. <b>CryptoBlades Tracker will only require you to enter your BSC address and nothing else</b>. Stay safe!   
-      .col-md-12.mb-2
-        .alert.alert-primary.alert-dismissible.fade.show(role="alert")
-          | <span class="text-center">I'm in dire need of gas. I accept donations thru this address: <b>0x2548696795a3bCd6A8fAe7602fc26DD95A612574</b> <button onclick='copy_address_to_clipboard()' class="btn icon-button-display"><i class="fa fa-clone"  aria-hidden="true" alt="Copy"></i> </button>. Any amount will do. <span class="opacity-50 me-1" style="color: red;">♥♥♥</span>
-          button(type="button", data-bs-dismiss="alert", aria-label="Close").btn-close
-        .alert.alert-success.alert-dismissible.fade.show(role="alert")
-          | <span class="text-center">Fight Result Logger is now available! <b>This will be free for 1 week</b>. Enjoy :) <a href='/logger' target='_blank'>CLICK HERE</a></span>
-          button(type="button", data-bs-dismiss="alert", aria-label="Close").btn-close
+      include ../includes/alerts      
     .row.mx-n2.py-2
       .col-md-2.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
