--- a/app/views/includes/menu.pug
+++ b/app/views/includes/menu.pug
@@ -20,3 +20,5 @@ header.header.navbar.navbar-expand-lg.navbar-dark.navbar-floating.navbar-sticky(
                         a.nav-link(href='/logger') Fight Results Logger
                     li.nav-item
                         a.nav-link(href='/calculator') Rewards Calculator
+                    li.nav-item
+                        a.nav-link(href='/market') eD3ath's Market Listing
