updated fight logger

--- a/app/views/footer.pug
+++ b/app/views/footer.pug
@@ -8,7 +8,7 @@ footer.footer
         span.opacity-50.me-1(style='color: red;') &nbsp;&hearts;&hearts;&hearts;
     p.fs-sm.text-center.mb-0.pb-2
         | Donation address: 
-        span.text-white 0x2548696795a3bCd6A8fAe7602fc26DD95A612574    
+        span.donate.text-white 0x2548696795a3bCd6A8fAe7602fc26DD95A612574    
     p.fs-sm.text-center.mb-0.pb-5
         a(href='https://www.digitalocean.com/?refcode=f998e79d4dd3&utm_campaign=Referral_Invite&utm_medium=Referral_Program&utm_source=badge')
             img(src='https://web-platforms.sfo2.cdn.digitaloceanspaces.com/WWW/Badge%201.svg' alt='DigitalOcean Referral Badge')
