--- a/app/views/includes/alerts.pug
+++ b/app/views/includes/alerts.pug
@@ -4,7 +4,7 @@
 .col-md-12
     if (page !== 'market')
         .alert.alert-primary.alert-dismissible.fade.show(role="alert")
-            | <span class="text-center">If you find this tool useful, I accept donations thru this address: <b>0x2548696795a3bCd6A8fAe7602fc26DD95A612574</b> <button onclick='copy_address_to_clipboard()' class="btn icon-button-display"><i class="fa fa-clone"  aria-hidden="true" alt="Copy"></i> </button>. Any amount will do. <span class="opacity-50 me-1" style="color: red;">♥♥♥</span>
+            | <span class="text-center">If you find this tool useful, I accept donations thru this address: <b class='donate'>0x2548696795a3bCd6A8fAe7602fc26DD95A612574</b> <button onclick='copy_address_to_clipboard()' class="btn icon-button-display"><i class="fa fa-clone"  aria-hidden="true" alt="Copy"></i> </button>. Any amount will do. <span class="opacity-50 me-1" style="color: red;">♥♥♥</span>
             button(type="button" data-bs-dismiss="alert" aria-label="Close").btn-close
         .alert.alert-success.alert-dismissible.fade.show(role="alert")
             | <span class="text-center">Looking for cheap weapons? <b>eD3ath's Marketplace</b> is now open! <a href="/market" target="_blank">Click here</a> to see what's on my item list.</span>
