--- a/app/views/pages/home.pug
+++ b/app/views/pages/home.pug
@@ -86,7 +86,7 @@ main.page-wrapper
                       tr
                         th.text-white.align-middle(rowspan='2')
                           | Name
-                        th.text-white.align-middle(rowspan='2')
+                        th.text-white.align-middle.address-column(rowspan='2')
                           | Address
                         th.text-white(colspan='6')
                           | Characters
