--- a/app/views/pages/market.pug
+++ b/app/views/pages/market.pug
@@ -25,6 +25,7 @@ main.page-wrapper
                         th.text-white Element
                         th.text-white Stars
                         th.text-white Attributes
+                        th.text-white Average Stats
                         th.text-white Price
                     tbody
 include ../footer
