--- a/app/views/pages/market.pug
+++ b/app/views/pages/market.pug
@@ -12,10 +12,23 @@ main.page-wrapper
                 h4.card-header-title.text-white
                   | Weapon Listing
           .card-body            
-            .row                            
-              .col-md-12
+            .row.align-items-center
+              .col
                 button.btn.btn-sm.btn-light.mb-2.btn-refresh(type='button' onclick='refresh()' disabled)
                   | Refresh
+              .col-auto
+                select#filter-element.form-select2(style='margin-right: -10px; margin-bottom: 10px;')
+                  option(value='all') -- All Elements --
+                  option(value='fire') Fire
+                  option(value='earth') Earth
+                  option(value='lightning') Lightning
+                  option(value='water') Water
+              .col-auto
+                select#filter-type.form-select2(style='margin-bottom: 10px;')
+                  option(value='all') -- All Type --
+                  option(value='pure') Pures
+                  option(value='semi') Semi-pures
+                  option(value='hybrid') Hybrids
               .col-md-12
                 .table-responsive.mb-0
                   table#table-weapons.table.table-sm.card-table
