--- a/app/views/pages/market.pug
+++ b/app/views/pages/market.pug
@@ -39,6 +39,7 @@ main.page-wrapper
                         th.text-white Stars
                         th.text-white Attributes
                         th.text-white Average Stats
+                        th.text-white Multiplier
                         th.text-white Price
                     tbody
 include ../footer
