--- a/app/views/pages/home.pug
+++ b/app/views/pages/home.pug
@@ -31,7 +31,7 @@ main.page-wrapper
           span#conv-total.mb-2.text-white.card-label
       .col-md-2.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
-          h6.fs-sm.fw-medium.text-muted Total BNB Balance
+          h6#label-tbalance.fs-sm.fw-medium.text-muted Total BNB Balance
           span#card-bnb.h4.text-white 0
           span#conv-bnb.mb-2.text-white.card-label
     .row.mx-n2.py-2
@@ -98,7 +98,7 @@ main.page-wrapper
                           | Skill Assets
                         th.text-white.align-middle.unstake-column(rowspan='2')
                           | Unstake Time
-                        th.text-white.align-middle(rowspan='2')
+                        th#label-balance.text-white.align-middle(rowspan='2')
                           | BNB Balance
                         th.text-white.align-middle(rowspan='2')
                           | Action
