--- a/app/views/includes/menu.pug
+++ b/app/views/includes/menu.pug
@@ -9,6 +9,9 @@ header.header.navbar.navbar-expand-lg.navbar-dark.navbar-floating.navbar-sticky(
                 select#select-currency.form-select2(style='float: right !important;')
             .d-flex.align-items-center.order-lg-3.ms-lg-auto
                 select#select-network.form-select2(style='float: right !important; margin-left: 5px !important;')
+        if page === 'market'
+            .d-flex.align-items-center.order-lg-3.ms-lg-auto
+                select#select-network.form-select2(style='float: right !important;')
         #primaryMenu.offcanvas.offcanvas-collapse.order-lg-2
             .offcanvas-header.navbar-shadow
                 h5.mt-1.mb-0 Menu
