--- a/app/views/pages/market.pug
+++ b/app/views/pages/market.pug
@@ -41,5 +41,6 @@ main.page-wrapper
                         th.text-white Average Stats
                         th.text-white Multiplier
                         th.text-white Price
+                        th.text-white Action
                     tbody
 include ../footer
