--- a/app/views/pages/home.pug
+++ b/app/views/pages/home.pug
@@ -35,24 +35,33 @@ main.page-wrapper
           span#card-bnb.h4.text-white 0
           span#conv-bnb.mb-2.text-white.card-label
     .row.mx-n2.py-2
-      .col-md-3.col-sm-6.px-2.mb-3
+      .col-md-2.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
           h6.fs-sm.fw-medium.text-muted Total Accounts
           span#card-account.h4.text-white 0
-      .col-md-3.col-sm-6.px-2.mb-3
+      .col-md-2.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
           h6.fs-sm.fw-medium.text-muted Total Characters
           span#card-char.h4.text-white 0
-      .col-md-3.col-sm-6.px-2.mb-3
+      .col-md-2.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
           h6.fs-sm.fw-medium.text-muted Current Skill Price
           span#card-price.h4.text-white 0
           span#conv-price.mb-2.text-white.card-label
-      .col-md-3.col-sm-6.px-2.mb-3
+      .col-md-2.col-sm-6.px-2.mb-3
+        .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
+          h6.fs-sm.fw-medium.text-muted Hourly Max Claim
+          span#card-claim.h4.text-danger 0
+          span#conv-claim.mb-2.text-white.card-label
+      .col-md-2.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
           h6.fs-sm.fw-medium.text-muted Hourly Fight Reward
-          span#card-reward.h4.text-white 0
+          span#card-reward.h4.text-danger 0
           span#conv-reward.mb-2.text-white.card-label
+      .col-md-2.col-sm-6.px-2.mb-3
+        .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
+          h6.fs-sm.fw-medium.text-muted Next Reset
+          span#card-reset.h4.text-white 
     .row.mx-n2.py-2
       .col-md-12.col-sm-126.px-2.mb-3
         .card.bg-dark
