--- a/app/views/pages/home.pug
+++ b/app/views/pages/home.pug
@@ -55,7 +55,7 @@ main.page-wrapper
           span#conv-claim.mb-2.text-white.card-label
       .col-md-2.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
-          h6.fs-sm.fw-medium.text-muted Hourly Fight Reward
+          h6.fs-sm.fw-medium.text-muted Hourly Fight Reward Allowance
           span#card-reward.h4.text-danger 0
           span#conv-reward.mb-2.text-white.card-label
       .col-md-2.col-sm-6.px-2.mb-3
