--- a/app/views/pages/home.pug
+++ b/app/views/pages/home.pug
@@ -51,12 +51,12 @@ main.page-wrapper
       .col-md-2.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
           h6.fs-sm.fw-medium.text-muted Hourly Max Claim
-          span#card-claim.h4.text-danger 0
+          span#card-claim.h4.text-white 0
           span#conv-claim.mb-2.text-white.card-label
       .col-md-2.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
           h6.fs-sm.fw-medium.text-muted Hourly Fight Reward Allowance
-          span#card-reward.h4.text-danger 0
+          span#card-reward.h4.text-white 0
           span#conv-reward.mb-2.text-white.card-label
       .col-md-2.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
