--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -34,5 +34,7 @@ html#main(lang='en')
       script(type="text/javascript" src='/build/js/fight-min.js')
     if page === 'calculator'
       script(type="text/javascript" src='/build/js/calculator-min.js')
-    if page === 'market'
-      script(type="text/javascript" src='/build/js/market-min.js')
+    if page === 'weapon'
+      script(type="text/javascript" src='/build/js/weapon-min.js')
+    if page === 'character'
+      script(type="text/javascript" src='/build/js/character-min.js')
