--- a/app/views/includes/menu.pug
+++ b/app/views/includes/menu.pug
@@ -24,7 +24,7 @@ header.header.navbar.navbar-expand-lg.navbar-dark.navbar-floating.navbar-sticky(
                     li.nav-item
                         a.nav-link(href='/calculator') Rewards Calculator
                     li.nav-item.dropdown
-                        a.nav-link.dropdown-toggle(data-toggle='dropdown' href='#' role='button' aria-haspopup='true' aria-expanded='false') eD3ath's Market Listing
+                        a.nav-link.dropdown-toggle(data-toggle='dropdown' href='javascript:void(0)' role='button' aria-haspopup='true' aria-expanded='false') eD3ath's Market Listing
                         .dropdown-menu
                             a.dropdown-item(href='/market?type=weapon') Weapons
                             a.dropdown-item(href='/market?type=character') Characters
