--- a/app/views/includes/menu.pug
+++ b/app/views/includes/menu.pug
@@ -27,5 +27,7 @@ header.header.navbar.navbar-expand-lg.navbar-dark.navbar-floating.navbar-sticky(
                         a.nav-link.dropdown-toggle(data-bs-toggle="dropdown" href='javascript:void(0)' role='button' aria-haspopup='true' aria-expanded='false') eD3ath's Market Listing
                         .dropdown-menu
                             a.dropdown-item(href='/market?type=weapon') Weapons
-                            a.dropdown-item(href='/market?type=character') Characters
+                            a.dropdown-item(href='/market?type=character') Characters                    
+                    li.nav-item
+                        a.nav-link(href='/stats') CryptoBlades Stats
 
