--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -38,3 +38,5 @@ html#main(lang='en')
       script(type="text/javascript" src='/build/js/weapon-min.js')
     if page === 'character'
       script(type="text/javascript" src='/build/js/character-min.js')
+    if page === 'stats'
+      script(type="text/javascript" src='/build/js/stats-min.js')
