--- a/app/views/includes/alerts.pug
+++ b/app/views/includes/alerts.pug
@@ -3,8 +3,8 @@
         p CryptoBlades Tracker is open-source so anyone can create a clone and modify it to ask for your sensitive information. CryptoBlades Tracker <b>will never ask</b> for your seed phrase or private key! <b>Never share these information</b> to any site nor your friends. <b>CryptoBlades Tracker will only require you to enter your BSC address and nothing else</b>. Stay safe!   
 .col-md-12
     if (page !== 'weapon' && page !== 'character')
-        .alert.alert-danger.alert-dismissible.fade.show(role="alert")
-            | <span class="text-center">I'm in dire need of gas to bridge my NFTs. I accept donations thru this address: <b class='donate'>0x2548696795a3bCd6A8fAe7602fc26DD95A612574</b> <button onclick='copy_address_to_clipboard()' class="btn icon-button-display"><i class="fa fa-clone"  aria-hidden="true" alt="Copy"></i> </button>. Any amount will do. <span class="opacity-50 me-1" style="color: red;">♥♥♥</span>
+        .alert.alert-success.alert-dismissible.fade.show(role="alert")
+            | <span class="text-center">Do you find this tool useful? I accept donations thru this address: <b class='donate'>0x2548696795a3bCd6A8fAe7602fc26DD95A612574</b> <button onclick='copy_address_to_clipboard()' class="btn icon-button-display"><i class="fa fa-clone"  aria-hidden="true" alt="Copy"></i> </button>. Any amount will do. <span class="opacity-50 me-1" style="color: red;">♥♥♥</span>
             button(type="button" data-bs-dismiss="alert" aria-label="Close").btn-close
         .alert.alert-warning.alert-dismissible.fade.show(role="alert")
             | <span class="text-center">Looking for cheap weapons or characters? <b>eD3ath's Marketplace</b> is now open! <a href="/market" target="_blank">Click here</a> to see what's on my item list.</span>
