--- a/app/views/pages/home.pug
+++ b/app/views/pages/home.pug
@@ -90,7 +90,7 @@ main.page-wrapper
                   label.form-check-label.text-white(for="btn-privacy") Hide address
                 .form-check.form-switch(style='float: right; margin-right: 10px !important;')
                   input#btn-hunstake.form-check-input(type="checkbox")
-                  label.form-check-label.text-white(for="btn-privacy") Hide unstake time
+                  label.form-check-label.text-white(for="btn-privacy") Hide claim time
                 .form-check.form-switch(style='float: right; margin-right: 10px !important;')
                   input#btn-hskills.form-check-input(type="checkbox")
                   label.form-check-label.text-white(for="btn-privacy") Hide skill assets                
@@ -111,7 +111,7 @@ main.page-wrapper
                         th.text-white.skill-column(colspan='5')
                           | Skill Assets
                         th.text-white.align-middle.unstake-column(rowspan='2')
-                          | Unstake Time
+                          | Claim Time
                         th#label-balance.text-white.align-middle(rowspan='2')
                           | BNB Balance
                         th.text-white.align-middle(rowspan='2')
@@ -130,9 +130,9 @@ main.page-wrapper
                         th.text-white.char-column 
                           | Stamina
                         th.text-white.skill-column 
-                          | In-Game
+                          | Unclaimed                         
                         th.text-white.skill-column 
-                          | Unclaimed 
+                          | Claimable
                         th.text-white.skill-column 
                           | Staked
                         th.text-white.skill-column 
