--- a/app/views/pages/home.pug
+++ b/app/views/pages/home.pug
@@ -6,7 +6,7 @@ main.page-wrapper
     .row.mx-n2.py-2
       .col-md-2.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
-          h6.fs-sm.fw-medium.text-muted Total In-game Skills
+          h6.fs-sm.fw-medium.text-muted Total Claimable Skills
           span#card-ingame.h4.text-white 0
           span#conv-ingame.mb-2.text-white.card-label
       .col-md-2.col-sm-6.px-2.mb-3
