--- a/app/views/pages/home.pug
+++ b/app/views/pages/home.pug
@@ -50,9 +50,8 @@ main.page-wrapper
           span#conv-price.mb-2.text-white.card-label
       .col-md-2.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
-          h6.fs-sm.fw-medium.text-muted Hourly Max Claim
+          h6.fs-sm.fw-medium.text-muted Skill Multiplier
           span#card-claim.h4.text-white 0
-          span#conv-claim.mb-2.text-white.card-label
       .col-md-2.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
           h6.fs-sm.fw-medium.text-muted Hourly Fight Reward Allowance
