--- a/app/views/pages/home.pug
+++ b/app/views/pages/home.pug
@@ -54,12 +54,12 @@ main.page-wrapper
           span#card-claim.h4.text-white 0
       .col-md-2.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
-          h6.fs-sm.fw-medium.text-muted Hourly Fight Reward Allowance
+          h6.fs-sm.fw-medium.text-muted Hourly Average Power
           span#card-reward.h4.text-white 0
           span#conv-reward.mb-2.text-white.card-label
       .col-md-2.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
-          h6.fs-sm.fw-medium.text-muted Next Reset
+          h6.fs-sm.fw-medium.text-muted Next Update
           span#card-reset.h4.text-white 
     .row.mx-n2.py-2
       .col-md-12.col-sm-126.px-2.mb-3
