added char power to table

--- a/app/views/pages/home.pug
+++ b/app/views/pages/home.pug
@@ -99,7 +99,7 @@ main.page-wrapper
                           | Name
                         th.text-white.align-middle.address-column(rowspan='2')
                           | Address
-                        th.text-white.char-column(colspan='6')
+                        th.text-white.char-column(colspan='7')
                           | Characters
                         th.text-white.skill-column(colspan='5')
                           | Skill Assets
@@ -114,6 +114,8 @@ main.page-wrapper
                           | Level
                         th.text-white.char-column 
                           | Element
+                        th.text-white.char-column 
+                          | Power
                         th.text-white.char-column 
                           | Unclaimed XP
                         th.text-white.char-column 
