--- a/app/views/modals/home.pug
+++ b/app/views/modals/home.pug
@@ -80,7 +80,7 @@
     .modal-content.bg-dark
       .modal-header
         h5.modal-title.text-white
-          | Fight History (Last 24 hours)
+          | Fight History (Last 200,000 blocks)
         button(type="button", class="btn-close", data-bs-dismiss="modal", aria-label="Close")
       .modal-body
         .row
