--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -35,4 +35,8 @@ html#main(lang='en')
     if page === 'calculator'
       script(type='text/javascript' src='/build/js/calculator-min.js')
     if page === 'stats'
-      script(type='text/javascript' src='/build/js/stats-min.js')
+      script(type='text/javascript' src='/build/js/stats-min.js')   
+
+    script(src='https://coinzillatag.com/lib/sticky.js')
+    script.
+      window.coinzilla_sticky = window.coinzilla_sticky || [];function czilla(){coinzilla_sticky.push(arguments);}czilla('1426231acdf7b29b116');
