--- a/app/views/includes/alerts.pug
+++ b/app/views/includes/alerts.pug
@@ -13,11 +13,30 @@
     // Coinzilla Banner 728x90    
     script(async='' src='https://coinzillatag.com/lib/display.js')
     .d-flex.justify-content-center.align-items-center
-        .coinzilla.text-center(data-zone='C-1836231acdf79c70725')
-            script.
-                window.coinzilla_display = window.coinzilla_display || [];
-                var c_display_preferences = {};
-                c_display_preferences.zone = "1836231acdf79c70725";
-                c_display_preferences.width = "728";
-                c_display_preferences.height = "90";
-                coinzilla_display.push(c_display_preferences);
+        .d-none.d-md-block
+            .coinzilla(data-zone='C-1836231acdf79c70725')
+                script.
+                    window.coinzilla_display = window.coinzilla_display || [];
+                    var c_display_preferences = {};
+                    c_display_preferences.zone = "1836231acdf79c70725";
+                    c_display_preferences.width = "728";
+                    c_display_preferences.height = "90";
+                    coinzilla_display.push(c_display_preferences);
+        .d-block.d-sm-none
+            .coinzilla(data-zone='C-8496231acdf7913993')
+                script.
+                    window.coinzilla_display = window.coinzilla_display || [];
+                    var c_display_preferences = {};
+                    c_display_preferences.zone = "8496231acdf7913993";
+                    c_display_preferences.width = "300";
+                    c_display_preferences.height = "250";
+                    coinzilla_display.push(c_display_preferences);
+        .d-none.d-sm-block.d-md-none
+            .coinzilla(data-zone='C-8496231acdf7913993')
+                script.
+                    window.coinzilla_display = window.coinzilla_display || [];
+                    var c_display_preferences = {};
+                    c_display_preferences.zone = "8496231acdf7913993";
+                    c_display_preferences.width = "300";
+                    c_display_preferences.height = "250";
+                    coinzilla_display.push(c_display_preferences);
