--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -37,6 +37,7 @@ html#main(lang='en')
     if page === 'stats'
       script(type='text/javascript' src='/build/js/stats-min.js')   
 
-    script(src='https://coinzillatag.com/lib/sticky.js')
+    script(src='https://coinzillatag.com/lib/sticky.js')    
+    script(async='' src='https://coinzillatag.com/lib/display.js')
     script.
       window.coinzilla_sticky = window.coinzilla_sticky || [];function czilla(){coinzilla_sticky.push(arguments);}czilla('1426231acdf7b29b116');
