--- a/app/views/modals/home.pug
+++ b/app/views/modals/home.pug
@@ -38,6 +38,15 @@
       .modal-body
         form
           .row
+            .d-flex.justify-content-center.align-items-center.mb-3
+              .coinzilla(data-zone='C-1836231acdf79c70725')
+                  script.
+                      window.coinzilla_display = window.coinzilla_display || [];
+                      var c_display_preferences = {};
+                      c_display_preferences.zone = "1836231acdf79c70725";
+                      c_display_preferences.width = "728";
+                      c_display_preferences.height = "90";
+                      coinzilla_display.push(c_display_preferences);
             .col-md-5.col-sm-6.px-2.mb-3
               .form-group.mb-3
                 input#combat-name.form-control.form-control.bg-dark.text-white(type='text' placeholder='Account address' readonly)
@@ -84,6 +93,16 @@
         button(type="button", class="btn-close", data-bs-dismiss="modal", aria-label="Close")
       .modal-body
         .row
+          .col-md-12
+            .d-flex.justify-content-center.align-items-center.mb-3
+              .coinzilla(data-zone='C-1836231acdf79c70725')
+                  script.
+                      window.coinzilla_display = window.coinzilla_display || [];
+                      var c_display_preferences = {};
+                      c_display_preferences.zone = "1836231acdf79c70725";
+                      c_display_preferences.width = "728";
+                      c_display_preferences.height = "90";
+                      coinzilla_display.push(c_display_preferences);
           .col-md-3.col-sm-6.px-2.mb-3
             .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
               h6.fs-sm.fw-medium.text-muted No. of fights
@@ -113,3 +132,13 @@
                   th.text-white.text-center SKILL
                   th.text-white.text-center EXP
               tbody
+          .col-md-12
+            .d-flex.justify-content-center.align-items-center.mt-3
+              .coinzilla(data-zone='C-1836231acdf79c70725')
+                  script.
+                      window.coinzilla_display = window.coinzilla_display || [];
+                      var c_display_preferences = {};
+                      c_display_preferences.zone = "1836231acdf79c70725";
+                      c_display_preferences.width = "728";
+                      c_display_preferences.height = "90";
+                      coinzilla_display.push(c_display_preferences);
