--- a/app/views/pages/home.pug
+++ b/app/views/pages/home.pug
@@ -99,7 +99,7 @@ main.page-wrapper
                           | Name
                         th.text-white.align-middle.address-column(rowspan='2')
                           | Address
-                        th.text-white.char-column(colspan='7')
+                        th.text-white.char-column(colspan='8')
                           | Characters
                         th.text-white.skill-column(colspan='5')
                           | Skill Assets
@@ -115,7 +115,9 @@ main.page-wrapper
                         th.text-white.char-column 
                           | Element
                         th.text-white.char-column 
-                          | Power
+                          | Power                        
+                        th.text-white.char-column 
+                          | Reputation
                         th.text-white.char-column 
                           | Unclaimed XP
                         th.text-white.char-column 
