--- a/app/views/pages/stats.pug
+++ b/app/views/pages/stats.pug
@@ -21,41 +21,33 @@ main.page-wrapper
           h6.fs-sm.fw-medium.text-muted Rewards Pool
           span#card-4.h4.text-white 0
     .row.mx-n2.py-2
-      .col-md-2.col-sm-6.px-2.mb-3
+      .col-md-3.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
-          h6.fs-sm.fw-medium.text-muted Max Claim
+          h6.fs-sm.fw-medium.text-muted Skill Multiplier
           span#card-5.h4.text-white 0
-      .col-md-2.col-sm-6.px-2.mb-3
-        .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
-          h6.fs-sm.fw-medium.text-muted Max Pay Per Fight
-          span#card-6.h4.text-white 0        
-      .col-md-2.col-sm-6.px-2.mb-3
-        .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
-          h6.fs-sm.fw-medium.text-muted Hourly Pay Per Fight
-          span#card-7.h4.text-white 0
-      .col-md-2.col-sm-6.px-2.mb-3
+      .col-md-3.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
           h6.fs-sm.fw-medium.text-muted Hourly Fights
-          span#card-8.h4.text-white 0
-      .col-md-2.col-sm-6.px-2.mb-3
+          span#card-6.h4.text-white 0
+      .col-md-3.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
           h6.fs-sm.fw-medium.text-muted Hourly Power Average
-          span#card-9.h4.text-white 0
-      .col-md-2.col-sm-6.px-2.mb-3
+          span#card-7.h4.text-white 0
+      .col-md-3.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
           h6.fs-sm.fw-medium.text-muted Hourly Total Power
-          span#card-10.h4.text-white 0
+          span#card-8.h4.text-white 0
     .row.mx-n2.py-2
       .col-md-4.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
           h6.fs-sm.fw-medium.text-muted Total Characters
-          span#card-11.h4.text-white 0
+          span#card-9.h4.text-white 0
       .col-md-4.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
           h6.fs-sm.fw-medium.text-muted Total Weapons
-          span#card-12.h4.text-white 0        
+          span#card-10.h4.text-white 0        
       .col-md-4.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
           h6.fs-sm.fw-medium.text-muted Total Shields
-          span#card-13.h4.text-white 0
+          span#card-11.h4.text-white 0
 include ../footer
