--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -14,7 +14,7 @@ html#main(lang='en')
     link(rel='stylesheet' media='screen' href='/css/core.css')
     link(rel='stylesheet' media='screen' href='/css/main.css')
     meta(name='coinzilla' content='d327568b4802f2f4e3795febda1adfdf')
-    
+
     // Google Analytics
     script(async='' src='https://www.googletagmanager.com/gtag/js?id=G-2C7J6DL9GR')
     script.
@@ -22,8 +22,8 @@ html#main(lang='en')
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
       gtag('config', 'G-2C7J6DL9GR');
-      
-  
+
+
   body(style='background-color: #12263f')
     block content
 
@@ -35,13 +35,15 @@ html#main(lang='en')
     if page === 'calculator'
       script(type='text/javascript' src='/build/js/calculator-min.js')
     if page === 'stats'
-      script(type='text/javascript' src='/build/js/stats-min.js')   
+      script(type='text/javascript' src='/build/js/stats-min.js')
+    if page === 'diagnostic'
+      script(type='text/javascript' src='/build/js/diagnostic-min.js')
 
-    script(src='https://coinzillatag.com/lib/sticky.js' id='coinzilla')    
+    script(src='https://coinzillatag.com/lib/sticky.js' id='coinzilla')
     script(async='' src='https://coinzillatag.com/lib/display.js')
     script.
       window.coinzilla_sticky = window.coinzilla_sticky || [];function czilla(){coinzilla_sticky.push(arguments);}czilla('1426231acdf7b29b116');
-      
+
       var timer = setInterval(()=>{
         try {
           if (!coinzilla_id_session) {}
