--- a/app/views/pages/diagnostic.pug
+++ b/app/views/pages/diagnostic.pug
@@ -30,7 +30,16 @@ main.page-wrapper
                     option(value='character') Character
                     option(value='weapon') Weapon
                     option(value='shield') Shield
-              .col-md-9.col-sm-6.px-2.mb-3
+              .col-md-7.col-sm-6.px-2.mb-3
                 p#diag-result.text-white
+              .col-md-2.col-sm-6.px-2.mb-3
+                .coinzilla(data-zone='C-8496231acdf7913993')
+                  script.
+                      window.coinzilla_display = window.coinzilla_display || [];
+                      var c_display_preferences = {};
+                      c_display_preferences.zone = "8496231acdf7913993";
+                      c_display_preferences.width = "300";
+                      c_display_preferences.height = "250";
+                      coinzilla_display.push(c_display_preferences);
             button#btn-diag.btn.btn-secondary(type='button' onclick='runDiag()') Run
 include ../footer
