--- a/src/app/pages/accounts/accounts.component.html
+++ b/src/app/pages/accounts/accounts.component.html
@@ -27,10 +27,10 @@
                 transition [overflow-anchor:none] hover:z-[2] focus:z-[3]
                 focus:outline-none dark:bg-gray-800 dark:text-white
                 [&:not([data-te-collapse-collapsed])]:bg-white
-                [&:not([data-te-collapse-collapsed])]:text-primary
+                [&:not([data-te-collapse-collapsed])]:text-warning
                 [&:not([data-te-collapse-collapsed])]:[box-shadow:inset_0_-1px_0_rgba(229,231,235)]
                 dark:[&:not([data-te-collapse-collapsed])]:bg-gray-800
-                dark:[&:not([data-te-collapse-collapsed])]:text-primary-400
+                dark:[&:not([data-te-collapse-collapsed])]:text-warning-400
                 dark:[&:not([data-te-collapse-collapsed])]:[box-shadow:inset_0_-1px_0_rgba(75,85,99)]"
                 [ngClass]="i === 0 ? 'rounded-t-lg' : 'rounded-none'"
                 type="button"
@@ -334,7 +334,7 @@
           <li>
             <a (click)="showManageGroupDrawer()"
               class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100
-              dark:text-primary dark:hover:bg-gray-600 dark:hover:text-white"
+              dark:text-warning dark:hover:bg-gray-600 dark:hover:text-white"
               role="menuitem">
               <div class="inline-flex items-center uppercase cursor-pointer">
                 Manage Group
