--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,8 +6,8 @@
     role="status" class="grid w-full grid-cols-1 gap-4 mt-4 xl:grid-cols-2
     2xl:grid-cols-3 animate-pulse">
     <div
-      class="items-center justify-between p-2 bg-white border border-gray-200
-      rounded-lg shadow-sm sm:flex dark:border-gray-700 sm:p-6
+      class="items-center justify-between p-2 bg-white border border-warning-200
+      rounded-lg shadow-sm sm:flex dark:border-warning-700 sm:p-6
       dark:bg-gray-800">
       <div class="w-full">
         <h3 class="mb-4 text-base font-normal text-gray-500
@@ -51,8 +51,8 @@
       </div>
     </div>
     <div
-      class="items-center justify-between p-2 bg-white border border-gray-200
-      rounded-lg shadow-sm sm:flex dark:border-gray-700 sm:p-6
+      class="items-center justify-between p-2 bg-white border border-warning-200
+      rounded-lg shadow-sm sm:flex dark:border-warning-700 sm:p-6
       dark:bg-gray-800">
       <div class="w-full">
         <h3 class="mb-4 text-base font-normal text-gray-500
@@ -101,8 +101,8 @@
       </div>
     </div>
     <div
-      class="items-center justify-between p-2 bg-white border border-gray-200
-      rounded-lg shadow-sm sm:flex dark:border-gray-700 sm:p-6
+      class="items-center justify-between p-2 bg-white border border-warning-200
+      rounded-lg shadow-sm sm:flex dark:border-warning-700 sm:p-6
       dark:bg-gray-800">
       <div class="w-full">
         <h3 class="mb-4 text-base font-normal text-gray-500
@@ -136,8 +136,8 @@
   <div
     class="grid w-full grid-cols-1 gap-4 mt-4 xl:grid-cols-2 2xl:grid-cols-3">
     <div
-      class="items-center justify-between p-2 bg-white border border-gray-200
-      rounded-lg shadow-sm sm:flex dark:border-gray-700 sm:p-6
+      class="items-center justify-between p-2 bg-white border border-warning-200
+      rounded-lg shadow-sm sm:flex dark:border-warning-700 sm:p-6
       dark:bg-gray-800">
       <div class="w-full">
         <h3 class="mb-4 text-base font-normal text-warning-600">
@@ -158,8 +158,8 @@
       </div>
     </div>
     <div
-      class="items-center justify-between p-2 bg-white border border-gray-200
-      rounded-lg shadow-sm sm:flex dark:border-gray-700 sm:p-6
+      class="items-center justify-between p-2 bg-white border border-warning-200
+      rounded-lg shadow-sm sm:flex dark:border-warning-700 sm:p-6
       dark:bg-gray-800">
       <div class="w-full">
         <h3 class="mb-4 text-base font-normal text-warning-600">
@@ -184,8 +184,8 @@
       </div>
     </div>
     <div
-      class="items-center justify-between p-2 bg-white border border-gray-200
-      rounded-lg shadow-sm sm:flex dark:border-gray-700 sm:p-6
+      class="items-center justify-between p-2 bg-white border border-warning-200
+      rounded-lg shadow-sm sm:flex dark:border-warning-700 sm:p-6
       dark:bg-gray-800">
       <div class="w-full">
         <h3 class="mb-4 text-base font-normal text-warning-600">
