--- a/src/app/includes/navbar/navbar.component.html
+++ b/src/app/includes/navbar/navbar.component.html
@@ -157,24 +157,24 @@
             routerLink="/tracker/home"
             class="block py-2 pl-3 pr-4 text-white md:p-0 dark:text-white
             rounded bg-blue-700
-            md:bg-transparent md:text-blue-700
-            md:dark:text-blue-500"
+            md:bg-transparent md:text-warning-700
+            md:dark:text-warning-500"
             aria-current="page">Home</a>
         </li>
         <li>
           <a
             routerLink="/tracker/accounts"
             class="block py-2 pl-3 pr-4 rounded text-gray-900 hover:bg-gray-100
-            md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0
-            dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700
+            md:hover:bg-transparent md:border-0 md:hover:text-warning-700 md:p-0
+            dark:text-white md:dark:hover:text-warning-500 dark:hover:bg-gray-700
             dark:hover:text-white md:dark:hover:bg-transparent">Accounts</a>
         </li>
         <li>
           <a
             routerLink="/tracker/treasury"
             class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100
-            md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0
-            dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700
+            md:hover:bg-transparent md:border-0 md:hover:text-warning-700 md:p-0
+            dark:text-white md:dark:hover:text-warning-500 dark:hover:bg-gray-700
             dark:hover:text-white md:dark:hover:bg-transparent">Treasury</a>
         </li>
       </ul>
